css-fixes: header phone no alignment

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -62,6 +62,7 @@
     .primary-contact {
       display: flex;
       justify-content: center;
+      align-items: center;
     }
     .office-timings {
       color: $color-tertiary;
